Fix gap forming on tablet devices between background form image and footer bar. Increase form section height by 50px to cover the gap.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,7 +279,7 @@ th, td {
     background-image: url('../images/tinyimages/jorge-fernandez-salas-0B1XIY4Jte8-unsplash_1tinified.jpg');
     background-size: cover;
     background-position: center;
-    height: 700px;
+    height: 750px;
     margin-top: 0.5rem;
 }
 
